--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,17 +1,60 @@
-/*#a99578*/
+//變數
+$borwn:#a99578;
+$blue:#0F4C75;
+$white:#FCFCFC;
+$fontNoto:"Noto Sans CJK TC";
+$fontGeo:"Georgia";
+$fontSans:"sans-serif";
+
+//rwd高度
+$m_intro_PC:1230px;
+$m_intro_1024iPad:1000px;
+$m_intro_768iPad:1030px;
+$m_intro_414mobile:1300px;
+
+$c_intro_768iPad:540px;
+$c_hotel_1024iPad:1150px;
+$c_hotel_768iPad:850px;
+$c_hotel_616:840px;
+$c_hotel_414mobile:2090px;
+
+//mixin
+@mixin Rwd_Property{
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+}
+
+
+//extend
+.heading_Noto_and_Blue{
+	font-family: $fontNoto;
+	color: $blue;
+	font-weight: bold;
+}
+
+.heading_Noto_and_White{
+	font-family: $fontNoto;
+	color: $white;
+}
+
 
 @font-face {
-  font-family: 'Noto Sans CJK TC';
+  font-family: $fontNoto;
   src: 
        url('../fonts/NotoSansCJKTC/NotoSansCJKtc-Regular.otf') format("opentype")
 }
  
+html,body{
+    width: 100%;
+    height: 100%;
+}
 
  /*中間的過度的橫線*/
 	hr{
 		width: 168px;
 		display: inline-block;
-	    border-color: #0F4C75;
+	    border-color: $blue;
 	    margin: 18px 50px;
 	    border-top-width: 0px;
 	    border-bottom-width: 1px;
@@ -30,22 +73,23 @@
 		        transition: 0.3s;
 
 		font-size: 24px;
-	    font-family: Noto Sans CJK TC;
+	    font-family: $fontNoto;
 	    font-weight: bold;
-	    color: #FCFCFC;
-	    background: #a99578;
+	    color: $white;
+	    background: $borwn;
 	    box-shadow: 0px 4px 11px rgba(239, 167, 64, 0.25);
 	}
 	h3.reserve:hover,
 	.headerbtm:hover
 	{
-		background: #0F4C75;
+		background: $blue;
 	}
+
+
  /*header*/
 	header{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
+
 		position: absolute;
 	    top: 0;
 	    left: 0;
@@ -59,9 +103,7 @@
 	    margin: 15px 0 0 2.6%;
 	}
 	header >.logo>img{
-		width: 100%;
-		height: auto;
-		overflow: hidden;	
+		@include Rwd_Property;
 	}
 
 
@@ -81,11 +123,11 @@
 	}
 	.menu div >a{
 		font-size: 21px;
-		color: #FCFCFC;
-		font-family: Noto Sans CJK TC;
+		color: $white;
+		font-family: $fontNoto;
 	}
 	.menu div >a:hover{
-	    border-bottom: 5px solid #FCFCFC;
+	    border-bottom: 5px solid $white;
 	    font-weight: bold;
 	}
 
@@ -107,9 +149,7 @@
 /* map */
 
 	.map{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
 	}
 	.continent{
 	  width: 25%;
@@ -151,9 +191,9 @@
 	 }
 
 	.map p{
-		font-family: Noto Sans CJK TC;
+		font-family: $fontNoto;
 	    font-size: 24px;
-	    color: #FCFCFC;
+	    color: $white;
 	    position: absolute;
 	    left: 50%;
 	    transform: translateX(-50%);
@@ -178,17 +218,13 @@
 
 /*footer*/
 	footer{
-		width: 100%;
-		height: auto;
-        overflow: hidden;
+		@include Rwd_Property;
 		background: black;
-		color: #FCFCFC;
+		color: $white;
 		position: relative;
 	}
 	footer >div{
-		width: 100%;
-	    height: auto;
-	    overflow: hidden;
+		@include Rwd_Property;
 		padding: 50px 9% 68px 6%;
 	}
 
@@ -196,12 +232,12 @@
 		font-weight: bold;
 		font-size: 36px;
 		line-height: 48px;
-		font-family: Noto Sans CJK TC;
+		font-family: $fontNoto;
 	}
 
 	footer span,footer p{
 		font-size: 24px;
-		font-family: Noto Sans CJK TC;
+		font-family: $fontNoto;
 	}
 	footer p{
 		line-height: 36px;	
@@ -287,16 +323,16 @@
 	    text-align: end;
 	}
 	.mob_List nav a{
-		font-family: Noto Sans CJK TC;
+		font-family: $fontNoto;
 		font-weight: bold;
 		font-size: 24px;
 		line-height: 36px;
 		padding-bottom: 4px;
-		color: #FCFCFC;
+		color: $white;
 	}
 
 	.mob_List nav a:hover{
-		border-bottom: 3px solid #FCFCFC;
+		border-bottom: 3px solid $white;
 	}
 
 
@@ -415,9 +451,7 @@
 	}
 
     .continent{
-    	width: 100%;
-   		height: auto;
-   		overflow: hidden;
+    	@include Rwd_Property;
     }
 	.continent >.senece-map{
 		height: 250px;
