--- a/sass/course.scss
+++ b/sass/course.scss
@@ -1,43 +1,16 @@
 
-@import url("reset.css");
-@import url("common.css");
+@import "reset";
+@import "common";
 
 
-//
-$borwn:#a99578;
-$blue:#0F4C75;
-$white:#FCFCFC;
-$fontNoto:"Noto Sans CJK TC";
-$fontGeo:"Georgia";
-$fontSans:"sans-serif";
 
-
-*{
-	margin:0;
-	padding:0;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-	font-family: $fontGeo,$fontNoto,$fontSans;
-}
-ul{list-style: none;}
-a{text-decoration: none;}
-img{display: block;}
-html,body{
-    width: 100%;
-    height: 100%;
-}
 
 /*banner*/
 	.bg-area{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
 
 		>.bg-img{
-			width: 100%;
-			height: auto;
-			overflow: hidden;	
+			@include Rwd_Property;
 
 			>img{
 				/*width: 100%;*/
@@ -98,9 +71,8 @@ html,body{
 		}
 
 		>div>h4{
-			font-family: Noto Sans CJK TC;
+			@extend .heading_Noto_and_White;
 			font-size: 36px;
-			color: $white;
 			display: inline-block;
 		}
 	}
@@ -110,9 +82,8 @@ html,body{
 
 /* 文字介紹 */
 	.course{
-		width: 100%;
-		height: auto;
-		overflow: hidden;		
+		@include Rwd_Property;
+
 		background-color: black;
 		color: $white;
 
@@ -134,25 +105,20 @@ html,body{
 
 .content{
 	>.intro{
-		width: 100%;
-	    height: auto;
-	    overflow: hidden;
+		@include Rwd_Property;
 		padding: 217px 5% 128px 29%;
 
 		>p{
-			font-family: "Noto Sans CJK TC";
+			@extend .heading_Noto_and_White;
 			font-size: 20px;
-			line-height: 36px;
-			color: $white;
+			line-height: 36px;	
 
 			&:first-child{padding-bottom: 28px;}
 		}
 	}
 
 	.course-img-Wrap{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
 		padding: 0 5%;
 	}
 
@@ -163,9 +129,7 @@ html,body{
 	.introImg1,
 	.introImg2,
 	.introImg3{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
 	}
 
 	.introImg1,.introImg2{
@@ -229,9 +193,7 @@ html,body{
 	    width: 100%;
 	}
 	.content>div{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
 	}
 	.hotel p{
 		font-size: 24px;
@@ -299,9 +261,7 @@ html,body{
 
 /*section*/
 	section{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
 		padding: 45px 0;
 	}
 
@@ -350,7 +310,7 @@ html,body{
 	.introImg3>img:nth-child(2){
 		height: 199px;
 	}
-	 .hotel {height: 1511px;}
+	 .hotel {height: $c_hotel_1024iPad;}
 	 .hotel-hr-box{width: 80px;}
 	 .img1 >img,.img2 >img {height: 262px;}
 	 .img3 >img,.img4 >img {height: 380px;}
@@ -372,7 +332,7 @@ html,body{
 	    padding-bottom: 50px;
 	}
 	.content>.intro {
-		height: 440px;
+		height: $c_intro_768iPad;
 	    padding: 115px 6% 28px 6%;
 	}
 	.introImg1, .introImg2 {
@@ -418,7 +378,7 @@ html,body{
 		display: block;
 	}
 	.hotel {
-        height: 1140px;
+        height: $c_hotel_616;
     }
     .course>div {
     	height: 1330px;
@@ -495,7 +455,7 @@ html,body{
 
 /*Trump Turnberry hotel*/
 	.blue{height: 1345px;}
-	.hotel{height: 2634px;}
+
 	.hotel>.content {
 		padding: 0;
 	}
@@ -503,7 +463,7 @@ html,body{
 		display: flex;
 		flex-direction: column-reverse;
 	}
-	.hotel{height: 2090px;}
+	.hotel{height: $c_hotel_414mobile;}
 	.hotel p {
 	    padding: 44px 38px 16px 22px;
 	    width: 375px;
