--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,31 +1,6 @@
 
-@import url("reset.css");
-@import url("common.css");
-
-//
-$borwn:#a99578;
-$blue:#0F4C75;
-$white:#FCFCFC;
-$fontNoto:"Noto Sans CJK TC";
-$fontGeo:"Georgia";
-$fontSans:"sans-serif";
-
-*{
-	margin:0;
-	padding:0;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-	font-family: $fontGeo,$fontNoto,$fontSans;
-}
-
-ul{list-style: none;}
-a{text-decoration: none;}
-img{display: block;}
-html,body{
-    width: 100%;
-    height: 100%;
-}
+@import "reset";
+@import "common";
 
 
 
@@ -44,9 +19,7 @@ html,body{
 		}
 
 		>div{
-			width: 100%;
-			height: auto;
-			overflow: hidden;
+			@include Rwd_Property;
 		}
 	}
 
@@ -94,20 +67,18 @@ html,body{
 		z-index: 10; /*配合slick dots設定*/
 
 		.headerbtm{
-			width: 100%;
+			@include Rwd_Property;
+
 			position: absolute;
-			height: auto;
-			overflow: hidden;
 			bottom: 0px;
 			background: $borwn;
 			cursor:pointer;
 
 			>h1{
+				@extend .heading_Noto_and_White;
 				text-align: center;
 			    line-height: 170px;
-				font-family: $fontNoto;
 				font-size: 48px;
-				color: $white;
 			}
 	    }
 
@@ -129,10 +100,9 @@ html,body{
 			font-family:Georgia;
 	     }
 	     >div>span{
-			font-family: $fontNoto;
+	     	@extend .heading_Noto_and_White;
 			font-size: 40px;
 		    padding-right: 52px;
-			color: $white;
 		}
 
 	}
@@ -141,20 +111,17 @@ html,body{
 
 /* feature */
 	.feature{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
+
 		padding-bottom: 132px;
 		text-align: center;
 
 		h1{
+			@extend .heading_Noto_and_Blue;
 			width: 200px;
 			display: inline-block;
 			text-align: center;
-			font-family: $fontNoto;
-			font-weight: bold;
 			font-size: 46px;
-			color: $blue;
 			padding: 94px 0 58px 0;
 		}
 
@@ -178,9 +145,8 @@ html,body{
 
 /* golftable */
 	.golftable{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
+
 		padding-bottom: 30px;
 
 		>h2{
@@ -218,7 +184,7 @@ html,body{
 
 /* intro */
 	.intro{
-		height: 1150px;
+		height: $m_intro_PC;
 		width: 100%;
 		overflow: hidden;
 		background-color: black;
@@ -251,9 +217,7 @@ html,body{
 				overflow: hidden;
 
 				>img{
-					width: 100%;
-					height: auto;
-					overflow: hidden;
+					@include Rwd_Property;
 				}
 			}
 		}
@@ -322,21 +286,17 @@ html,body{
 /*section 我們的服務*/
 
 	section{
-		width: 100%;
-		height: auto;
-		overflow: hidden;
+		@include Rwd_Property;
 
 		>.title{
-			width: 100%;
-			height: auto;
-			overflow: hidden;
+			@include Rwd_Property;
+
 			>h1{
+				@extend .heading_Noto_and_Blue;
 				padding: 80px 0 50px 0;
 				font-size: 48px;
 				text-align: center;
-				font-family: $fontNoto;
-				font-weight: bold;
-				color: $blue;
+				
 			}
 
 		}
@@ -346,18 +306,14 @@ html,body{
 		}
 
 		img{
-			width: 100%;
-			height: auto;
-			overflow: hidden;
+			@include Rwd_Property;
 		}
 
 		p{
+			@extend .heading_Noto_and_Blue;
 			padding: 0px 20px;
-			font-family: $fontNoto;
-			font-weight: bold;
 			font-size: 24px;
 			line-height: 36px;
-			color: $blue;
 		}
 
 		>div:last-child{
@@ -450,7 +406,7 @@ html,body{
 		font-size: 42px;
 	}
 
-	.intro{height: 836px;}
+	.intro{height: $m_intro_1024iPad;}
 	.introR {
     width: 70%;
     padding: 0 0 0 5%;
@@ -504,7 +460,7 @@ html,body{
     width: 55%;
 }
 .intro {
-    height: 920px;
+    height:$m_intro_768iPad;
 }
 .introR {
     width: 100%;
@@ -573,7 +529,7 @@ html,body{
 	}
 	section>.service1>div, section>.service2>div {
 	    margin-bottom: 46px;
-	    height: 180px;
+	    /*height: 180px;*/
 	}
 	section> div:last-child {
 	    padding: 21px 10px 31px 10px;
@@ -704,7 +660,7 @@ html,body{
 	    height: 290px;
 	}
 	.intro{
-		height: 1300px;
+		height: $m_intro_414mobile;
 	}
 	.introR {
 	    width: 100%;
